--- a/resume-en.tex
+++ b/resume-en.tex
@@ -60,11 +60,11 @@
 \input{Sections/education.tex}
 \input{Sections/skills.tex}
 \input{Sections/experience.tex}
-\input{Sections/extracurricular.tex}
-\input{Sections/honors.tex}
-\input{Sections/presentation.tex}
-\input{Sections/writing.tex}
-\input{Sections/committees.tex}
+% \input{Sections/extracurricular.tex}
+% \input{Sections/honors.tex}
+% \input{Sections/presentation.tex}
+% \input{Sections/writing.tex}
+% \input{Sections/committees.tex}
 \input{Sections/publications.tex}
 
 %-------------------------------------------------------------------------------
