--- a/Sections/experience.tex
+++ b/Sections/experience.tex
@@ -95,45 +95,45 @@
     }
 
 %---------------------------------------------------------
-  \cventry[\faSuitcase]
-    {Software Engineer Trainee} % Job title
-    {Software Maestro (funded by Korea Ministry of Knowledge and Economy)} % Organization
-    {Seoul, S.Korea} % Location
-    {Jul. 2012 - Jun. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Performed research memory management strategies of OS and implemented in Python an interactive simulator for Linux kernel memory management.}
-      \end{cvitems}
-    }
+  % \cventry[\faSuitcase]
+  %   {Software Engineer Trainee} % Job title
+  %   {Software Maestro (funded by Korea Ministry of Knowledge and Economy)} % Organization
+  %   {Seoul, S.Korea} % Location
+  %   {Jul. 2012 - Jun. 2013} % Date(s)
+  %   {
+  %     \begin{cvitems} % Description(s) of tasks/responsibilities
+  %       \item {Performed research memory management strategies of OS and implemented in Python an interactive simulator for Linux kernel memory management.}
+  %     \end{cvitems}
+  %   }
 
 %---------------------------------------------------------
-  \cventry[\faSuitcase]
-    {Software Engineer} % Job title
-    {ShitOne Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer. Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-      \end{cvitems}
-    }
+  % \cventry[\faSuitcase]
+  %   {Software Engineer} % Job title
+  %   {ShitOne Corp.} % Organization
+  %   {Seoul, S.Korea} % Location
+  %   {Dec. 2011 - Feb. 2012} % Date(s)
+  %   {
+  %     \begin{cvitems} % Description(s) of tasks/responsibilities
+  %       \item {Developed a proxy drive smartphone application which connects proxy driver and customer. Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
+  %     \end{cvitems}
+  %   }
 
 %---------------------------------------------------------
-  \cventry[\faSuitcase]
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      % \begin{cvitems} % Description(s) of tasks/responsibilities
-      %   \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-      %   \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      % \end{cvitems}
-      \begin{cvsubentries}
-       \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-       \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      \end{cvsubentries}
-    }
+  % \cventry[\faSuitcase]
+  %   {Freelance Penetration Tester} % Job title
+  %   {SAMSUNG Electronics} % Organization
+  %   {S.Korea} % Location
+  %   {Mar. 2011 - Oct. 2011} % Date(s)
+  %   {
+  %     % \begin{cvitems} % Description(s) of tasks/responsibilities
+  %     %   \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
+  %     %   \item {Conducted penetration testing on SAMSUNG Smart TV.}
+  %     % \end{cvitems}
+  %     \begin{cvsubentries}
+  %      \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
+  %      \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
+  %     \end{cvsubentries}
+  %   }
 
 %---------------------------------------------------------
 \end{cventries}
