--- a/Sections/education.tex
+++ b/Sections/education.tex
@@ -11,15 +11,45 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH (Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {Ph.D. in Computer Science and Engineering} % Degree
+    {UNSW (The University of New South Wales)} % Institution
+    {Sydney, Australia} % Location
+    {2018.2 - Current} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item \textbf{Research:} Machine Learning in Recommendation Systems (adversarial learning, deep generative models and transfer learning);
+        \item \textbf{Award:} \href{https://www.scientia.unsw.edu.au/scientia-phd-scholarships}{\underline{Scientia PhD Scholarship}} Holder (The top one PhD scholarship in UNSW);
+        \item \textbf{Publications:}  4 research-track papers in top international conferences on machine learning and data mining, including \href{https://www.kdd.org/kdd2019/}{\underline{SIGKDD'19}}, \href{https://sigir.org/sigir2019/}{\underline{SIGIR'19}}, \href{https://ijcai19.org/}{\underline{IJCAI'19}} and \href{https://www.ijcnn.org/}{\underline{IJCNN'19}};
+        \item \textbf{Main Skills:} Python, GPU Programming with CUDA, Tensorflow/Pytorch and Scikit-Learn.
       \end{cvitems}
     }
 
+  \cventry%
+    {M.Phil. in Electronic Engineering}%
+    {UoM (The University of Melbourne)}%
+    {Melbourne, Australia}%
+    {2014.11 - 2017.4}%
+    {
+      \begin{cvitems}
+        \item \textbf{Research:} Short-reach Optical Communication Using Directly Modulated Lasers;
+        \item \textbf{Award:} UoM International Research Scholarship (MIRS/MIFRS);
+        \item \textbf{Publications:} 19 peer-reviewed research-track papers, including 11 conference papers (\href{https://www.ofcconference.org/en-us/home/}{OFC}, \href{https://www.ecocexhibition.com/conference/}{ECOC}, etc.), and 8 journal papers (\href{https://www.osapublishing.org/oe/home.cfm}{Optics Express}, \href{https://www.osapublishing.org/ol/home.cfm}{Optics Letters}, etc.);
+        \item \textbf{Main Skills:} MatLab, Digital Signal Processing, Telecommunication System Design;
+        \item \textbf{Grades:} 91/100 (First Class Honours).
+      \end{cvitems}
+    }
+
+  \cventry%
+    {B.E. in Automatic Control}%
+    {USTC (The University of Science and Technology of China) \\ {\fontsize{10pt}{1em}\itshape Top 100 in the World, Top 5 in Mainland China (QS/THE Rankings)}}%
+    {He Fei City, China}%
+    {2010.9 - 2014.7}%
+    {
+      \begin{cvitems}
+        \item \textbf{Grades:} GPA (3.91/4.3), Major (4.02/4.3), Math-related (4.09/4.3);
+        \item \textbf{Ranking:} Top 3\% in the department (2/86);
+        \item \textbf{Computer Science Courses Taken:} Data Structure and Algorithms, Database Systems, Computer Architecture, Operating Systems, Computer Networks, Pattern Recognition, Artificial Intelligence.
+      \end{cvitems}
+    }
 %---------------------------------------------------------
 \end{cventries}
