--- a/Sections/experience.tex
+++ b/Sections/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Experience}
+\cvsection[\faBriefcase]{Experience}
 
 
 %-------------------------------------------------------------------------------
@@ -11,129 +11,42 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Architect} % Job title
-    {Omnious. Co., Ltd.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jun. 2017 - May. 2018} % Date(s)
+  {Ph.D. Student} % Job title
+  {The University of New South Wales} % Organization
+  {Sydney, Australia} % Location
+  {2018.2 - Current} % Date(s)
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item Designed noval deep learning-based recommendation algorithms to achieve state-of-the-art performance, including the adversarial collaborative autoencoder, the adversarial variational autoencoder, domain adaptive recommender for shared-user cross-domain recommendation, and convolutional generative collaborative filtering;
+      \item Implemented various recommendation methods using Python with TensorFlow and trained them on Nvidia GPUs under Linux environment (familiar with Ubuntu, CentOS) \href{https://github.com/bennetyf/RecSys}{\faGithub~Github Link};
+      \item Attended and delivered oral presentations in top international conferences including SIGKDD, SIGIR, IJCAI and IJCNN.
+    \end{cvitems}
+  }
+
+  \cventry
+    {Tutor} % Job title
+    {The University of New South Wales} % Organization
+    {Sydney, Australia} % Location
+    {2019.6 - 2019.9} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        % \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS,On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
-        \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
-        \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
-        \item {Implemented several API microservices in Node.js Koa and in the serverless AWS Lambda functions.}
-        \item {Deployed a centralized logging environment(ELK, Filebeat, CloudWatch, S3) which gather log data from docker containers and AWS resources.}
-        \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
+        \item Designed course materials (lecture slides, tutorials, quizzes, projects) on the applications of recommendation systems in e-commerce;
+        \item Delivered tutorial to Master's students, instructed students on the final projects and evaluated students' overall performance;
+        \item Used Google Colab to demonstrate recommendation algorithms on real-world \href{http://cseweb.ucsd.edu/~jmcauley/datasets.html}{\underline{datasets}} in class.
       \end{cvitems}
   }
 
-%---------------------------------------------------------
-  \cventry[\faSuitcase]
-    {Co-founder \& Software Engineer} % Job title
-    {PLAT Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jan. 2016 - Jun. 2017} % Date(s)
+  \cventry
+    {Firmware Engineer Intern}%
+    {Palette, Pty., Ltd. (\href{https://palette.com/}{Company Homepage})}%
+    {Melbourne, Australia}%
+    {2017.6 - 2017.10}%
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
+      \begin{cvitems}
+        \item Upgraded the firmware of the \textsc{CUBE} product implemented on the nRF52 microprocessor (ARM Cortex-M4) using C programming language;
+        \item Refactored the firmware architecture and implemtented core libraries, such as Flash storage layer, Bluetooth and UART communication, Bootloader, etc. These libs are still being used today in the company's other products.
+        \item Tested the 2^{nd}-generation PCB board for \textsc{CUBE} using the upgraded firmware.
       \end{cvitems}
     }
-
-%---------------------------------------------------------
-  \cventry[\faSuitcase]
-    {Researcher} % Job title
-    {Undergraduate Research, Machine Learning Lab~(Prof. Seungjin Choi)} % Organization
-    {Pohang, S.Korea} % Location
-    {Mar. 2016 - Jun. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researched classification algorithms(SVM, CNN) to improve accuracy of human exercise recognition with wearable device.}
-        \item {Developed two TIZEN applications to collect sample data set and to recognize user exercise on SAMSUNG Gear S.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry[\faSuitcase]
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Apr. 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-        \item {Implemented a distributed web stress test tool with high anonymity.}
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry[\faSuitcase]
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
-        \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry[\faSuitcase]
-    {Researcher for <Detecting video’s torrents using image similarity algorithms>} % Job title
-    {Undergraduate Research, Computer Vision Lab(Prof. Bohyung Han)} % Organization
-    {Pohang, S.Korea} % Location
-    {Sep. 2012 - Feb. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researched means of retrieving a corresponding video based on image contents using image similarity algorithm.}
-        \item {Implemented prototype that users can obtain torrent magnet links of corresponding video relevant to an image on web site.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  % \cventry[\faSuitcase]
-  %   {Software Engineer Trainee} % Job title
-  %   {Software Maestro (funded by Korea Ministry of Knowledge and Economy)} % Organization
-  %   {Seoul, S.Korea} % Location
-  %   {Jul. 2012 - Jun. 2013} % Date(s)
-  %   {
-  %     \begin{cvitems} % Description(s) of tasks/responsibilities
-  %       \item {Performed research memory management strategies of OS and implemented in Python an interactive simulator for Linux kernel memory management.}
-  %     \end{cvitems}
-  %   }
-
-%---------------------------------------------------------
-  % \cventry[\faSuitcase]
-  %   {Software Engineer} % Job title
-  %   {ShitOne Corp.} % Organization
-  %   {Seoul, S.Korea} % Location
-  %   {Dec. 2011 - Feb. 2012} % Date(s)
-  %   {
-  %     \begin{cvitems} % Description(s) of tasks/responsibilities
-  %       \item {Developed a proxy drive smartphone application which connects proxy driver and customer. Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-  %     \end{cvitems}
-  %   }
-
-%---------------------------------------------------------
-  % \cventry[\faSuitcase]
-  %   {Freelance Penetration Tester} % Job title
-  %   {SAMSUNG Electronics} % Organization
-  %   {S.Korea} % Location
-  %   {Mar. 2011 - Oct. 2011} % Date(s)
-  %   {
-  %     % \begin{cvitems} % Description(s) of tasks/responsibilities
-  %     %   \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-  %     %   \item {Conducted penetration testing on SAMSUNG Smart TV.}
-  %     % \end{cvitems}
-  %     \begin{cvsubentries}
-  %      \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-  %      \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-  %     \end{cvsubentries}
-  %   }
-
 %---------------------------------------------------------
 \end{cventries}
