--- a/resume-en.tex
+++ b/resume-en.tex
@@ -20,13 +20,13 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
 \name{Feng}{}{Yuan}
-\position{Software Architect}{}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\position{PhD Student}{}
+\address{Sydney, New South Wales, Australia}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-% \github{posquit0}
+\mobile{(+61) 422360724}
+\email{bennetyf@gmail.com}
+% \homepage{bennetyf.github.io}
+\github{bennetyf}
 % \linkedin{posquit0}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
@@ -34,7 +34,7 @@
 % \skype{skype-id}
 % \reddit{reddit-id}
 % \medium{madium-id}
-% \googlescholar{googlescholar-id}{name-to-display}
+\googlescholar{pmV2l0YAAAAJ&hl=en}{Google Scholar}
 %% \firstname and \lastname will be used
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
@@ -58,7 +58,7 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{Sections/education.tex}
-\input{Sections/skills.tex}
+% \input{Sections/skills.tex}
 \input{Sections/experience.tex}
 % \input{Sections/extracurricular.tex}
 % \input{Sections/honors.tex}
