--- a/Sections/education.tex
+++ b/Sections/education.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection[\faUniversity]{Education}
+\cvsection[icon=\faUniversity]{Education}
 
 
 %-------------------------------------------------------------------------------
@@ -10,7 +10,7 @@
 \begin{cventries}
 
 %---------------------------------------------------------
-  \cventry
+  \cventry[bottom=-3mm]
     {Ph.D. in Computer Science and Engineering} % Degree
     {UNSW (The University of New South Wales)} % Institution
     {Sydney, Australia} % Location
@@ -19,12 +19,12 @@
       \begin{cvitems} % Description(s) bullet points
         \item \textbf{Research:} Machine Learning in Recommendation Systems (adversarial learning, deep generative models and transfer learning);
         \item \textbf{Award:} \href{https://www.scientia.unsw.edu.au/scientia-phd-scholarships}{\underline{Scientia PhD Scholarship}} Holder (The top one PhD scholarship in UNSW);
-        \item \textbf{Publications:}  4 research-track papers in top international conferences on machine learning and data mining, including \href{https://www.kdd.org/kdd2019/}{\underline{SIGKDD'19}}, \href{https://sigir.org/sigir2019/}{\underline{SIGIR'19}}, \href{https://ijcai19.org/}{\underline{IJCAI'19}} and \href{https://www.ijcnn.org/}{\underline{IJCNN'19}};
+        \item \textbf{Publications:}  4 research-track papers in top international conferences on machine learning and data mining, including \href{https://www.kdd.org/kdd2019/}{\underline{\bfseries SIGKDD'19}}, \href{https://sigir.org/sigir2019/}{\underline{\bfseries SIGIR'19}}, \href{https://ijcai19.org/}{\underline{\bfseries IJCAI'19}} and \href{https://www.ijcnn.org/}{\underline{\bfseries IJCNN'19}};
         \item \textbf{Main Skills:} Python, GPU Programming with CUDA, Tensorflow/Pytorch and Scikit-Learn.
       \end{cvitems}
     }
 
-  \cventry%
+  \cventry[bottom=-3mm]
     {M.Phil. in Electronic Engineering}%
     {UoM (The University of Melbourne)}%
     {Melbourne, Australia}%
@@ -39,7 +39,7 @@
       \end{cvitems}
     }
 
-  \cventry%
+  \cventry[bottom=-3mm]
     {B.E. in Automatic Control}%
     {USTC (The University of Science and Technology of China) \\ {\fontsize{10pt}{1em}\itshape Top 100 in the World, Top 5 in Mainland China (QS/THE Rankings)}}%
     {He Fei City, China}%
@@ -47,7 +47,7 @@
     {
       \begin{cvitems}
         \item \textbf{Grades:} GPA (3.91/4.3), Major (4.02/4.3), Math-related (4.09/4.3);
-        \item \textbf{Ranking:} Top 3\% in the department (2/86);
+        \item \textbf{Ranking:} Top 3\% in the department \textbf{(2/86)};
         \item \textbf{Computer Science Courses Taken:} Data Structure and Algorithms, Database Systems, Computer Architecture, Operating Systems, Computer Networks, Pattern Recognition, Artificial Intelligence.
       \end{cvitems}
     }
