--- a/Sections/experience.tex
+++ b/Sections/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection[\faBriefcase]{Experience}
+\cvsection[icon=\faBriefcase]{Experience}
 
 
 %-------------------------------------------------------------------------------
@@ -10,7 +10,7 @@
 \begin{cventries}
 
 %---------------------------------------------------------
-  \cventry
+  \cventry[bottom=-3mm]
   {Ph.D. Student} % Job title
   {The University of New South Wales} % Organization
   {Sydney, Australia} % Location
@@ -19,11 +19,12 @@
     \begin{cvitems} % Description(s) of tasks/responsibilities
       \item Designed noval deep learning-based recommendation algorithms to achieve state-of-the-art performance, including the adversarial collaborative autoencoder, the adversarial variational autoencoder, domain adaptive recommender for shared-user cross-domain recommendation, and convolutional generative collaborative filtering;
       \item Implemented various recommendation methods using Python with TensorFlow and trained them on Nvidia GPUs under Linux environment (familiar with Ubuntu, CentOS) \href{https://github.com/bennetyf/RecSys}{\faGithub~Github Link};
-      \item Attended and delivered oral presentations in top international conferences including SIGKDD, SIGIR, IJCAI and IJCNN.
+      \item Attended and delivered oral presentations in top international conferences (\textbf{SIGKDD, SIGIR, IJCAI and IJCNN}).
+      \item Served as external reviewers for multiple conferences and journals, such as AAAI, ICDM, DASFAA, TKDE.
     \end{cvitems}
   }
 
-  \cventry
+  \cventry[bottom=-3mm]
     {Tutor} % Job title
     {The University of New South Wales} % Organization
     {Sydney, Australia} % Location
@@ -36,7 +37,7 @@
       \end{cvitems}
   }
 
-  \cventry
+  \cventry[bottom=-3mm]
     {Firmware Engineer Intern}%
     {Palette, Pty., Ltd. (\href{https://palette.com/}{Company Homepage})}%
     {Melbourne, Australia}%
@@ -45,8 +46,77 @@
       \begin{cvitems}
         \item Upgraded the firmware of the \textsc{CUBE} product implemented on the nRF52 microprocessor (ARM Cortex-M4) using C programming language;
         \item Refactored the firmware architecture and implemtented core libraries, such as Flash storage layer, Bluetooth and UART communication, Bootloader, etc. These libs are still being used today in the company's other products.
-        \item Tested the 2^{nd}-generation PCB board for \textsc{CUBE} using the upgraded firmware.
+        \item Tested the 2nd-generation PCB board for \textsc{CUBE} using the upgraded firmware.
       \end{cvitems}
     }
+
+    \cventry
+      {Lab Demonstrator}%
+      {The University of Melbourne}%
+      {Melbourne, Australia}%
+      {2016.7 - 2016.12}%
+      {
+        \begin{cvitems}
+          \item Designed lab experiments for the master-level course Telecommunication System;
+          \item Instructed Master's students to conduct the telecommunication experiments and gave lab demonstrations;
+          \item Marked students' lab reports, assignments and exam papers;
+        \end{cvitems}
+      }
+
+    \cventry
+      {Postgraduate Researcher}%
+      {Photonics Research Lab, The University of Melbourne}%
+      {Melbourne, Australia}%
+      {2014.11 - 2017.5}%
+      {
+        \begin{cvitems}
+          \item Proposed, confirmed and experimentally demonstrated the novel scheme of complex-modulated directly modulated lasers based on digital coherent detection;
+          \item Confirmed and experimentally demonstrated the application of Stokes vector receiver in short-reach optical communication systems;
+          \item Performed entensive Matlab simulation, optical communication system testing, DSP algorithm designing and implementation, and C programming on DSP chips;
+          \item Published \textbf{10} international conference papers \textbf{6} of which are in the \textbf{top one} conference OFC, and \textbf{9} journal papers 6 of which are in \textbf{top} journals \textit{Optics Express} and \textit{Optics Letters};
+          \item Attended and presented my papers in oral and poster form.
+          \item Served as external reviewers for multiple conferences and journals, such as OECC, Optics Express etc.
+        \end{cvitems}
+      }
+
+    \cventry
+      {Undergraduate Researcher}%
+      {Modern Materials Lab \\ The University of Science and Technology of China}%
+      {He Fei, China}%
+      {2014.2 - 2014.6}%
+      {
+        \begin{cvitems}
+          \item Designed the circuits and PCB board for DLP-based \textbf{3D printer} using Altium Designer and conducted thorough testing on the PCB. Main components contains a C8051 microprocessor, L298N motor drivers, LDO power supply and USB controllers;
+          \item Developed the firmware for the 3D printer to parse the raw 3D printing schema and control multiple stepper motors using PWM to carry out the printing job;
+          \item Programmed a user interface for desktop computers to send commands to 3D printer via USB protocol using Labview;
+          \item Demonstrated the 3D printer during the open week of science at USTC in 2014.
+        \end{cvitems}
+      }
+
+      \cventry
+        {Embedded System Engineer Intern}%
+        {Modern Telescope Research Lab \\ Chinese Academy of Sciences}%
+        {Chang Chun, China}%
+        {2013.6 - 2013.9}%
+        {
+          \begin{cvitems}
+            \item Designed the PCB board for the actuator controller used in the active optics system of modern telescopes by Altium Designer. Main components contains two C8051 microprocessors, one Altera CPLD, analogue signal amplifiers and filters for sensor signal processing, A/D converters from Analog Devices, actuator drivers, RS485 UART communication chips and LDO power supply;
+            \item Tested the PCB board and implemented an embedded controller using the digital PID control algorithm. Programed in C for the microprocessors and VHDL for the CPLD;
+            \item Developed a user interface for desktop computers using Labview;
+          \end{cvitems}
+        }
+
+    \cventry
+      {Circuit Designer and Embedded System Developer}%
+      {Student Training Centre \\ The University of Science and Technology of China}%
+      {He Fei, China}%
+      {2011.6 - 2011.10}%
+      {
+        \begin{cvitems}
+          \item Designed the circuits of a simple massage robot using Altium Designer. Main parts include one AVR ATmega64 microprocessor, L298N motor drivers, LDO power supply and RS-232 UART communication chips;
+          \item Developed the embedded program for the AVR microprocessor using C programming language;
+          \item Attended the \textbf{RoboGame Contest} and ranked 8th in 32 teams.
+        \end{cvitems}
+      }
 %---------------------------------------------------------
 \end{cventries}
