--- a/Sections/skills.tex
+++ b/Sections/skills.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection[\faGears]{Skills}
+\cvsection[icon=\faGears]{Skills}
 
 
 %-------------------------------------------------------------------------------
@@ -11,28 +11,36 @@
 
 %---------------------------------------------------------
   \cvskill
-    {DevOps} % Category
-    {AWS, Docker, Kubernetes, Rancher, Vagrant, Packer, Terraform, Jenkins, CircleCI} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Back-end} % Category
-    {Koa, Express, Django, REST API} % Skills
+    {Machine-Learning} % Category
+    {Tensorflow, Pytorch, Scikit-Learn} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Front-end} % Category
-    {Hugo, Redux, React, HTML5, LESS, SASS} % Skills
+    {React, Redux, Redux-Saga, HTML5, CSS3, SASS, Bootstrap} % Skills
 
+%---------------------------------------------------------
+  \cvskill
+    {Back-end} % Category
+    {Spring Boot, Spring MVC, MyBatis, Flask, Express, NodeJS, OAuth, Nginx, Tomcat \\ MySQL, PostgreSQL, MongoDB, Redis} % Skills
+
+  \cvskill
+    {Distributed Systems}{HDFS, Hadoop MapReduce, Spark, Spark MLlib, HBase, Cassandra, Zookeeper}
+
+  \cvskill{DevOps}
+    {Docker, AWS EC2, S3, EBS, Lambda etc.}
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Node.js, Python, JAVA, OCaml, LaTeX} % Skills
+    {Python, JAVA, C, JavaScript, SQL, MatLab, LaTeX} % Skills
 
+  \cvskill
+    {Embedded-System}
+    {Altium Designer, Keil, Multisim, AVR Studio}
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Korean, English, Japanese} % Skills
+    {Mandarin, English} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
