--- a/resume-en.tex
+++ b/resume-en.tex
@@ -58,13 +58,13 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{Sections/education.tex}
-% \input{Sections/skills.tex}
 \input{Sections/experience.tex}
-% \input{Sections/extracurricular.tex}
-% \input{Sections/honors.tex}
+\input{Sections/skills.tex}
+\input{Sections/honors.tex}
 % \input{Sections/presentation.tex}
 % \input{Sections/writing.tex}
 % \input{Sections/committees.tex}
+\input{Sections/others.tex}
 \input{Sections/publications.tex}
 
 %-------------------------------------------------------------------------------
