--- a/Sections/honors.tex
+++ b/Sections/honors.tex
@@ -1,14 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Honors \& Awards}
-
-
-%-------------------------------------------------------------------------------
-%	SUBSECTION TITLE
-%-------------------------------------------------------------------------------
-\cvsubsection{International}
-
+\cvsection[icon=\faTrophy]{Awards}
 
 %-------------------------------------------------------------------------------
 %	CONTENT
@@ -18,121 +11,56 @@
 %---------------------------------------------------------
 \cvhonor
     {Travel Grant} % Award
-    {IJCAI} % Event
-    {Las Vegas, U.S.A} % Location
+    {the 28th International Joint Conference on Artificial Intelligence} % Event
+    {Macao, China} % Location
     {2019} % Date(s)
 
 \cvhonor
-    {Finalist} % Award
-    {DEFCON 26th CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2018} % Date(s)
+  {Travel Grant}
+  {the 42nd International ACM SIGIR Conference (SIGIR'19)}
+  {Paris, France}
+  {2019}
 
-%---------------------------------------------------------
-  \cvhonor
-    {Finalist} % Award
-    {DEFCON 25th CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2017} % Date(s)
+\cvhonor
+  {Scientia PhD Scholarship}
+  {PhD candidature at UNSW}
+  {Sydney, Australia}
+  {2017}
 
-%---------------------------------------------------------
-  \cvhonor
-    {Finalist} % Award
-    {DEFCON 22nd CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2014} % Date(s)
+\cvhonor
+  {International Research Scholarship}
+  {UoM}
+  {Melbourne, Australia}
+  {2014}
 
-%---------------------------------------------------------
-  \cvhonor
-    {Finalist} % Award
-    {DEFCON 21st CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2013} % Date(s)
+\cvhonor
+  {Outstanding Research Award}
+  {Undergraduate Research Program at USTC}
+  {He Fei, China}
+  {2013}
 
-%---------------------------------------------------------
-  \cvhonor
-    {Finalist} % Award
-    {DEFCON 19th CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2011} % Date(s)
+\cvhonor
+  {China Aerospace Science and Technology Corporation Scholarship}
+  {USTC}
+  {He Fei, China}
+  {2013}
 
-%---------------------------------------------------------
-  \cvhonor
-    {6th Place} % Award
-    {SECUINSIDE Hacking Competition World Final} % Event
-    {Seoul, S.Korea} % Location
-    {2012} % Date(s)
+\cvhonor
+  {The Institute of Electronics, Chinese Academy of Sciences Scholarship}
+  {USTC}
+  {He Fei, China}
+  {2012}
 
-%---------------------------------------------------------
-\end{cvhonors}
+\cvhonor
+  {Outstanding Student Scholarship}
+  {USTC}
+  {He Fei, China}
+  {2011}
 
-
-%-------------------------------------------------------------------------------
-%	SUBSECTION TITLE
-%-------------------------------------------------------------------------------
-\cvsubsection{Domestic}
-
-
-%-------------------------------------------------------------------------------
-%	CONTENT
-%-------------------------------------------------------------------------------
-\begin{cvhonors}
-
-%---------------------------------------------------------
-  \cvhonor
-    {3rd Place} % Award
-    {WITHCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2015} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {Silver Prize} % Award
-    {KISA HDCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2017} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {Silver Prize} % Award
-    {KISA HDCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2013} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {2nd Award} % Award
-    {HUST Hacking Festival} % Event
-    {S.Korea} % Location
-    {2013} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {3rd Award} % Award
-    {HUST Hacking Festival} % Event
-    {S.Korea} % Location
-    {2010} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {3rd Award} % Award
-    {Holyshield 3rd Hacking Festival} % Event
-    {S.Korea} % Location
-    {2012} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {2nd Award} % Award
-    {Holyshield 3rd Hacking Festival} % Event
-    {S.Korea} % Location
-    {2011} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {5th Place} % Award
-    {PADOCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2011} % Date(s)
-
+\cvhonor
+  {8th place}
+  {RoboGame Contest at USTC}
+  {He Fei, China}
+  {2011}
 %---------------------------------------------------------
 \end{cvhonors}
