--- a/Sections/publications.tex
+++ b/Sections/publications.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Publications}
+\cvsection[icon=\faFileTextO]{Publications}
 
 
 %-------------------------------------------------------------------------------
@@ -44,7 +44,7 @@
     {Adversarial Variational Embedding for Robust Semi-supervised Learning}%
     {Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining (KDD'19)}{Anchorage, AK, USA}{}{139–147}{}{2019}
 
-\begin{comment}
+% \begin{comment}
     \itempub[type=conference, href=https://www.osapublishing.org/abstract.cfm?uri=ofc-2017-M3C.5]%
     {D. Che, \textbf{F. Yuan}, and W. Shieh}%
     {100-Gb/s Complex Direct Modulation over 1600-km SSMF Using Probabilistic Transition Estimation}%
@@ -139,5 +139,5 @@
     {Enabling complex modulation using the frequency chirp of directly modulated lasers}%
     {Proceedings European Conference on Optical Communication}{Valencia, Spain}{}%
     {1-3}{}{2015}
-\end{comment}
+% \end{comment}
 \end{cvpubs}
