--- a/Sections/experience.tex
+++ b/Sections/experience.tex
@@ -9,8 +9,11 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+  \newcommand{\exptopskip}{0mm}
+  \newcommand{\expbottomskip}{-2mm}
+
 %---------------------------------------------------------
-  \cventry[bottom=-3mm]
+  \cventry[bottom=\expbottomskip, top=\exptopskip]
   {Ph.D. Student} % Job title
   {The University of New South Wales} % Organization
   {Sydney, Australia} % Location
@@ -24,7 +27,7 @@
     \end{cvitems}
   }
 
-  \cventry[bottom=-3mm]
+  \cventry[top=\exptopskip,bottom=\expbottomskip]
     {Tutor} % Job title
     {The University of New South Wales} % Organization
     {Sydney, Australia} % Location
@@ -37,7 +40,7 @@
       \end{cvitems}
   }
 
-  \cventry[bottom=-3mm]
+  \cventry[top=\exptopskip,bottom=\expbottomskip]
     {Firmware Engineer Intern}%
     {Palette, Pty., Ltd. (\href{https://palette.com/}{Company Homepage})}%
     {Melbourne, Australia}%
@@ -50,7 +53,7 @@
       \end{cvitems}
     }
 
-    \cventry
+    \cventry[top=\exptopskip,bottom=\expbottomskip]
       {Lab Demonstrator}%
       {The University of Melbourne}%
       {Melbourne, Australia}%
@@ -63,7 +66,7 @@
         \end{cvitems}
       }
 
-    \cventry
+    \cventry[top=\exptopskip,bottom=\expbottomskip]
       {Postgraduate Researcher}%
       {Photonics Research Lab, The University of Melbourne}%
       {Melbourne, Australia}%
@@ -79,7 +82,7 @@
         \end{cvitems}
       }
 
-    \cventry
+    \cventry[top=\exptopskip,bottom=\expbottomskip]
       {Undergraduate Researcher}%
       {Modern Materials Lab \\ The University of Science and Technology of China}%
       {He Fei, China}%
@@ -93,7 +96,7 @@
         \end{cvitems}
       }
 
-      \cventry
+      \cventry[top=\exptopskip,bottom=\expbottomskip]
         {Embedded System Engineer Intern}%
         {Modern Telescope Research Lab \\ Chinese Academy of Sciences}%
         {Chang Chun, China}%
@@ -106,7 +109,7 @@
           \end{cvitems}
         }
 
-    \cventry
+    \cventry[top=\exptopskip,bottom=\expbottomskip]
       {Circuit Designer and Embedded System Developer}%
       {Student Training Centre \\ The University of Science and Technology of China}%
       {He Fei, China}%
