--- a/Sections/publications.tex
+++ b/Sections/publications.tex
@@ -8,7 +8,7 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 
-\begin{cvpubs}[fontsize=12pt, series=papers]
+\begin{cvpubs}[fontsize=12pt, series=papers, top=-0.5mm]
 
     \itempub[type=conference, href=https://dl.acm.org/doi/10.1145/3331184.3331321]%
     {\textbf{F. Yuan}, L. Yao, and B. Benatallah}%
