--- a/Sections/skills.tex
+++ b/Sections/skills.tex
@@ -7,7 +7,7 @@
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{cvskills}
+\begin{cvskills}[]
 
 %---------------------------------------------------------
   \cvskill
