--- a/Sections/honors.tex
+++ b/Sections/honors.tex
@@ -6,7 +6,7 @@
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{cvhonors}
+\begin{cvhonors}[top=-1mm]
 
 %---------------------------------------------------------
 \cvhonor
